objects/Loan_Payments__c.object
<CustomObject>
    <fields>
        <fullName>Loan_Application__c</fullName>
        <label>Loan Application</label>
        <referenceTo>Loan_Application__c</referenceTo>
        <relationshipLabel>Loan Payments</relationshipLabel>
        <relationshipName>Loan_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Month__c</fullName>
        <label>Payment Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Amount__c</fullName>
        <label>Received Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Loan Payment</label>
    <nameField>
        <displayFormat>LP-{0000000}</displayFormat>
        <label>Loan Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>